Pressure: Made sensors 20% larger
# 0.00.15 (56022) Sep 1, 2011
Improved insets and spacing for control panels
Moved up "ft^3/s" in rate readout in flux meter for english only since the units weren't centered
Fixed: Reset all broken for toolbox sensors
Fixed: Tools should snap back to the right location when dropped over the toolbox
Flow & Water tower: Added a toolbox for the tools
Fixed: Sensor positions shouldn't overlap the control panel for long translated versions
Pressure: Fixed initial location of pressure sensor
Fixed hot spot of pressure sensor to be in the center-left, not top-left
Constrained the pressure sensor node to remain in the visible region of the canvas, see #2826
Constrained the velocity sensor node to remain in the visible region of the canvas, see #2826
Fixed: Update the value in the velocity sensor on reset, without this call it would reset to "?" even if 0.00 was the original value
Fixed: Reset all should restore the sim-speed slider value
Fixed: Play/pause buttons should reset
Fixed: Sim should be running, not paused after reset
Flow: Fixed: Flux doesn't reset
Flow: Fixed: Flux meter should hide on "reset all"
Flow: Fixed: Flux meter location should reset on "reset all"
Flow: Fixed: Friction checkbox doesn't reset
Flow: Fixed: Reset all should reset the "dots" checkbox
Water tower: Fixed: Hose does not reset on "reset all"
Fixed: Pipe drag handles can get lost behind clock control panel and other control panels
Factored out a top level class for the faucet
Switched to use faucet graphics from sugar-and-salt-solutions, see #3058
Removed confirmation on reset all
Water tower: Added a user control to change the angle of the hose
Water tower: Made it so that water can flow out of the hose
Water tower: Added hose graphic
Water tower: Started adding hose
Flow: Improved English units for flux meter
Flow: Added multiple unit sets for flux meter
Flow: Prevent the user from dragging the flux meter out of bounds
Flow: Added readouts for flux meter